<resources>
    <string name="app_name">Time Keeper</string>
    <string name="calc_button">Calculator</string>
    <string name="add_delete_shift_button">Add/delete shift</string>
    <string name="text_view_header">Working \n Time</string>

    <string name="hour_stake_editView">Hour rate</string>
    <string name="overtime_hours">Overtime hours</string>
    <string name="weekend_hours">Weekend and holiday hours</string>
    <string name="night_shift_hours">Night shift hours</string>
    <string name="weekend_overtime">Weekend and holiday overtime hours</string>
    <string name="month">Month</string>
    <string name="year">Year</string>

    <string name="calculate_button">Calculate</string>
    <string name="select_date_header">Select date</string>
    <string name="btn_add_shift">Add shift</string>
    <string name="week_day_mon">MON</string>
    <string name="week_day_tue">TUE</string>
    <string name="week_day_wen">WEN</string>
    <string name="week_day_thu">THU</string>
    <string name="week_day_fri">FRI</string>
    <string name="week_day_sat">SAT</string>
    <string name="week_day_sun">SUN</string>
    <string name="tv_total">Total</string>
    <string name="tv_total_overtime">Total overtime</string>
    <string name="tv_total_night_hours">Total night hours</string>
    <string name="hint_overtime">Overtime</string>
    <string name="hint_night_hour">Night Hour</string>
    <string name="btn_delete_shift">Delete shift</string>


</resources>
